Enhance layout by adding column gap in skills section and adjust margin for responsiveness; fix capitalization in portfolio title

--- a/public/scss/components/aboutPage.scss
+++ b/public/scss/components/aboutPage.scss
@@ -20,6 +20,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 5.6rem;
+  column-gap: 4.2rem;
   // padding: 0 2rem;
 }
 
