--- a/public/scss/responsive.scss
+++ b/public/scss/responsive.scss
@@ -308,6 +308,10 @@ in media queries!, instead 1rem = 1em = 16px */
     font-size: 40%;
   }
 
+  .skills-section {
+    margin: 3rem;
+  }
+
   .skill-description {
     padding: 0 3.6rem;
   }
